// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-AjmGg bNpNxT"
      >
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Constraint Name
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Type
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                EntityType
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Properties
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                None
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders empty for Neo4j >= 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-AjmGg bNpNxT"
      >
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Index Name
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Type
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Uniqueness
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                EntityType
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Properties
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                None
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
            </tr>
          </tbody>
        </table>
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Constraint Name
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Type
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                EntityType
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Properties
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                None
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for Neo4j < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-AjmGg bNpNxT"
      >
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for Neo4j >= 4.2 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-AjmGg bNpNxT"
      >
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Index Name
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Type
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Uniqueness
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                EntityType
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Properties
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                node_label_property
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              />
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                [
  "released"
]
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                ONLINE
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-clIzBv cnmjir"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Constraint Name
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Type
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                EntityType
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-Galmp gvuvWT table-header"
              >
                Properties
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-faUpoM eqdrKW table-row"
            >
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                constraint_550b2518
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                UNIQUE
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                node
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                [
  "Movie"
]
              </td>
              <td
                class="sc-fWCJzd khtPdV table-properties"
              >
                [
  "released"
]
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
